<resources>
    <string name="app_name">Android Kotlin Debugging</string>

    <string name="hello_world">Hello World</string>
    <string name="sum_of_two_numbers">2 + 2</string>
    <string name="current_day_text">Current Day</string>
    <string name="random_color_text">Random Color</string>
    <string name="print_list_text">Print List</string>
    <string name="random_number">Random Number</string>
    <string name="play_sound">Play Sound</string>
    <string name="click_anywhere">click anywhere!</string>
    <string name="random_number_btn">Random Number</string>
</resources>