<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/challenge_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_margin="40dp"
        android:text="@string/hello_world"/>

    <Button
        android:id="@+id/challenge_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/challenge_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_margin="40dp"
        android:text="@string/sum_of_two_numbers"/>

    <Button
        android:id="@+id/challenge_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/challenge_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_margin="40dp"
        android:text="@string/current_day_text"/>

    <Button
        android:id="@+id/challenge_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/challenge_three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_margin="40dp"
        android:text="@string/random_color_text"/>

    <Button
        android:id="@+id/challenge_five"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="4dp"
        android:padding="10dp"
        android:text="@string/print_list_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challenge_four" />

    <Button
        android:id="@+id/randomNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:drawableLeft="@drawable/dice"
        android:padding="20dp"
        android:text="@string/random_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challenge_five" />

    <Button
        android:id="@+id/playSound"
        android:layout_width="0dp"
        android:drawableLeft="@drawable/music_note"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="4dp"
        android:padding="20dp"
        android:text="@string/play_sound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/randomNum" />

</androidx.constraintlayout.widget.ConstraintLayout>